<resources>
    <string name="app_name">KalkulyatorApp</string>
    <string name="stan">Standard</string>
    <string name="but">but</string>
    <string name="c">C</string>
    <string name="qavsLeft">(</string>
    <string name="qavsRight">)</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="diva">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="backbase"><![CDATA[◀]]></string>
</resources>